# sde-deepagent

./: .coverage  .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
config/: agents.yaml  repos.yaml
context/: README.md
docs/: api.md  architecture.md  configuration.md  deployment.md  development.md
docs/superpowers/specs/: 2026-07-03-hardening-and-shadcn-ui-design.md
src/devagent/: __init__.py  agent_factory.py  chat.py  gitops.py  llm.py  main.py  memory.py  pricing.py  runner.py  server.py  settings.py  webfetch.py
src/devagent/intake/: base.py  linear.py  slack.py  telegram.py
src/sde_deepagent/: __init__.py  agent_factory.py  auth.py  bus.py  chat.py  checkpointing.py  config.py  context.py  db.py  gitops.py  main.py  mcp_tools.py  memory.py  pricing.py  prompts.py  repo_reader.py  runner.py  sandbox.py  secrets.py  server.py  settings.py  webfetch.py  worker.py
src/sde_deepagent/intake/: base.py  github_reviews.py  linear.py  slack.py  telegram.py
tests/: conftest.py  test_agent_factory.py  test_api.py  test_auth.py  test_budgets.py  test_chat.py  test_checkpointing.py  test_config.py  test_context.py  test_db.py  test_gitops.py  test_intake.py  test_memory.py  test_pricing.py  test_repo_reader.py  test_resources.py  test_runner_e2e.py  test_runner_faults.py  test_sandbox.py  test_secrets.py  test_steering_and_reviews.py  test_trace_attribution.py  test_upgrades.py  test_webfetch.py  test_worker.py
ui/: app.js  index.html  styles.css
web/: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: main.tsx
web/src/components/: empty.tsx  layout.tsx  markdown.tsx  model-select.tsx  status-badge.tsx  theme.tsx
web/src/lib/: api.test.ts  api.ts  format.test.ts  format.ts  sse.test.ts  sse.ts  types.ts
web/src/pages/: agents.tsx  chat.tsx  new-task.tsx  repos.tsx  resources.tsx  status.tsx  task-detail.tsx  tasks.tsx
