[project]
name = "sde-deepagent"
version = "0.3.1"
description = "Self-hostable software developer agent system built on LangChain deepagents"
license = {file = "LICENSE"}
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "cryptography>=43",
    "deepagents>=0.6.8",
    "fastapi[standard]>=0.136.3",
    "httpx>=0.28.1",
    "langchain>=1.3.8",
    "langchain-anthropic>=1.4.5",
    "langchain-google-genai>=4.2.5",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=1.3.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "pydantic-settings>=2.14.1",
    "pyyaml>=6.0.3",
    "slack-sdk>=3.42.0",
    "uvicorn>=0.49.0",
]

[project.scripts]
sde-deepagent = "sde_deepagent.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.15.17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sde_deepagent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E402"]
